--- a/style.css
+++ b/style.css
@@ -6,18 +6,14 @@ body {
 
 @keyframes pop {
     0% {
-        transform: scale(0);  
+        transform: scale(0);
     }
 
-    50% {
-        transform: scale(1.2);
+    60% {
+        transform: scale(1.1);
     }
 
-    90% {
-        transform: scale(0.9);
-    }
-
-    100% {
+    80% {
         transform: scale(1);
         /* transform: rotate(2deg); */
     }
@@ -27,7 +23,7 @@ body {
     position: absolute;
     width: 250px;
     border-radius: 10px;
-    animation: pop 0.5s;
+    animation: pop 0.5s ease-in-out;
     /* transform: rotate(2deg); */
 }
 
