--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-body {
-    background-color: rgb(24, 24, 24);
-    overflow: hidden;
-    user-select: none;
-}
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 @keyframes pop {
     0% {
@@ -17,6 +13,12 @@ body {
         transform: scale(1) translate(-50%, -50%);
         /* transform: rotate(2deg); */
     }
+}
+
+body {
+    background-color: rgb(24, 24, 24);
+    overflow: hidden;
+    user-select: none;
 }
 
 .linus {
@@ -35,4 +37,20 @@ body {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+footer {
+    position: absolute;
+    bottom: 1em;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    font-size: 10pt;
+    font-family: 'Lato', sans-serif;
+    color: #a0a0a0;
+}
+
+a {
+    color: #a0a0a0;
 }
