--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
     overflow: hidden;
     -moz-user-select: none;
     user-select: none;
+
+    margin: 0px;
+    padding: 0px;
 }
 
 .linus {
@@ -42,10 +45,15 @@ body {
 
 footer {
     position: absolute;
-    bottom: 1em;
+    bottom: 0px;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 2em;
+
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
 
     font-size: 10pt;
     font-family: 'Lato', sans-serif;
