--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
 
 @keyframes pop {
     0% {
@@ -16,7 +17,7 @@
 }
 
 body {
-    background-color: rgb(24, 24, 24);
+    background-color: rgb(0, 0, 0);
     overflow: hidden;
     -moz-user-select: none;
     user-select: none;
@@ -35,8 +36,12 @@ body {
     /* transform: rotate(2deg); */
 }
 
-.message {
+h1 {
+    color: white;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
     position: absolute;
+    font-size: 3em;
     top: 50%;
     left: 50%;
     margin-right: -50%;
@@ -69,8 +74,9 @@ a {
         width: 100px;
     }
 
-    .message {
+    h1 {
         width: 80%;
+        font-size: 1em;
     }
 
     footer {
