--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(24, 24, 24);
     overflow: hidden;
     -moz-user-select: none;
     user-select: none;
@@ -36,12 +36,12 @@ body {
     /* transform: rotate(2deg); */
 }
 
-h1 {
-    color: white;
+.message {
+    /* color: white;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+    font-size: 3em; */
     position: absolute;
-    font-size: 3em;
     top: 50%;
     left: 50%;
     margin-right: -50%;
@@ -74,6 +74,9 @@ a {
         width: 100px;
     }
 
+    .message {
+        width: 80%;
+    }
     h1 {
         width: 80%;
         font-size: 1em;
